--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -291,7 +291,7 @@
                     <tr>
                         <td></td>
                         <td>9:30 - 11:30 AM</td>
-                        <td>Programming 1 (A1910/A1930) - Dr. Sebastien Siva</td>
+                        <td>Programming 1 (A1900/A1910/A1930) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -321,7 +321,7 @@
                     <tr>
                         <td></td>
                         <td>9:00 - 11:30 AM</td>
-                        <td>Programming 3 (A1910/A1930) - Dr. Sebastien Siva</td>
+                        <td>Programming 3 (A1900/A1910/A1930) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -331,7 +331,7 @@
                     <tr>
                         <td></td>
                         <td>1:15 - 3:30 PM</td>
-                        <td>Programming 4 (A1910/A1930) - Dr. Sebastien Siva</td>
+                        <td>Programming 4 (A1900/A1910/A1930) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
