--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -286,7 +286,7 @@
                     <tr>
                         <td></td>
                         <td>9:00 - 9:30 AM</td>
-                        <td>Pre-Test (A1910/A1930)</td>
+                        <td>Pre-Test (A1900/A1910/A1930)</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -306,7 +306,7 @@
                     <tr>
                         <td></td>
                         <td>1:30 - 4:00 PM</td>
-                        <td>Programming 2 (A1940) - Dr. Sebastien Siva</td>
+                        <td>Programming 2 (A1900/A1910/A1930) - Dr. Sebastien Siva</td>
                     </tr>
                     <tr>
                         <td></td>
