--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -346,11 +346,25 @@
                 </tbody>
             </table>
 
-            <p>Registration Fee for non-GGC students: <strong>$25.00</strong>. Students who complete the program will receive a certificate and prize. Payment details will be emailed upon acceptance into the program. We may offer a fee waiver for non-GGC students with a GPA of 3.3 or higher. Please note that eligibility for this waiver will be reviewed on a case-by-case basis and is subject to available resources.</p> 
-            <br>
-            <p>The Women in Technology (WIT) Java Programming Boot Camp is designed to address the significant underrepresentation of women in the field of technology. This focus aligns with the purpose of the grant funding the program, which is to provide support and opportunities for women pursuing careers in IT.</p>
-             <p>However, participation in the boot camp is open to all students.We encourage anyone interested in enhancing their programming skills to apply.</p>
- 
+
+            <h2>Non-Discrimination Statement</h2>
+    <p>The Women in Technology (WIT) Java Programming Boot Camp is designed to address the underrepresentation of women in technology. However, participation is open to all students regardless of gender, and we encourage anyone interested in enhancing their programming skills to apply.</p>
+
+    <h2>Clarification of Grant Purpose</h2>
+    <p>This boot camp is supported by a Google grant aimed at providing opportunities for underrepresented groups in IT. While the program seeks to encourage women in technology, it welcomes all students to apply.</p>
+
+    <h2>Equal Access to Benefits</h2>
+    <p>All participants, regardless of gender, will receive equal access to programming instruction, professional development opportunities, guest speaker sessions, certificates, and other resources. The goal of the boot camp is to foster an inclusive and supportive learning environment for everyone.</p>
+
+    <h2>Title IX Compliance</h2>
+    <p>In compliance with Title IX, which prohibits gender-based discrimination in educational programs receiving federal funds, this boot camp is designed to offer equal opportunities to all participants, regardless of gender. We are committed to ensuring that no student is excluded from participation or denied benefits based on gender.</p>
+
+    <h2>Fee Waiver Information</h2>
+    <p>Registration for non-GGC students includes a $25 fee. Fee waivers may be available for eligible non-GGC students based on academic merit (e.g., GPA of 3.3 or higher). Eligibility will be reviewed on a case-by-case basis, and all students meeting the criteria are encouraged to apply. This ensures that waivers are offered equitably to all eligible participants, regardless of gender.</p>
+
+    <h2>Inclusive Marketing</h2>
+    <p>While this boot camp focuses on supporting women in technology, all marketing and promotional materials reflect the inclusive nature of the program. We welcome and encourage students of all genders to participate in the program and benefit from the learning and professional development opportunities it offers.</p>
+
 
             <div class="center">
                 <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
