--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -252,7 +252,7 @@
             </div>
             <br>
 
-            <p>Women in Technology Java Programming Boot Camp will be held in-person from:<br>
+            <p>Programming Boot Camp will be held in-person from - 
               Friday, January 3, 2025 - Saturday, January 4, 2025.</p>
 
             <p><strong>The purpose of this boot camp is to:</strong></p>
@@ -263,7 +263,7 @@
                         <li>Group for students who have been exposed to Java and want a refresher to prepare for other IT classes</li>
                     </ul>
                 </li>
-                <li>Enable women in IT to form a community of support with peers, student mentors, and IT faculty</li>
+                <li>Enable students in IT to form a community of support with peers, student mentors, and IT faculty</li>
                 <li>Provide professional development opportunities such as guest speakers and off-campus field trips</li>
             </ul>
 
