--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -349,7 +349,7 @@
 
             
  
-    <p>Registration for non-GGC students includes a $25 fee. Fee waivers may be available for eligible non-GGC students based on academic merit (e.g., GPA of 3.3 or higher). Eligibility will be reviewed on a case-by-case basis, and all students meeting the criteria are encouraged to apply. This ensures that waivers are offered equitably to all eligible participants, regardless of gender.</p>
+    <p>Registration for non-GGC students includes a $25 fee. Fee waivers may be available for eligible non-GGC students based on academic merit (GPA of 3.3 or higher).</p>
 
     
 
