--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -301,7 +301,7 @@
                     <tr>
                         <td></td>
                         <td>12:15 - 1:15 PM</td>
-                        <td>Lunch</td>
+                        <td>Lunch with Dr. Joseph Ametepe, Dean of School of Science and Technology</td>
                     </tr>
                     <tr>
                         <td></td>
