--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -237,7 +237,7 @@
 
             <div class="center">
                 <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
-                    <i class="fa fa-pencil"></i> Application-Closed
+                    <i class="fa fa-pencil"></i> Application/Registration-Closed
                 </a>
             </div>
 
@@ -355,7 +355,7 @@
 
             <div class="center">
                 <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
-                    <i class="fa fa-pencil"></i> Application-Closed
+                    <i class="fa fa-pencil"></i> Application/Registration-Closed
                 </a>
             </div>
 
