--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -326,7 +326,7 @@
                     <tr>
                         <td></td>
                         <td>11:35 AM - 1:00 PM</td>
-                        <td>Guest Speakers and Lunch</td>
+                        <td>Guest Speakers and Lunch: Dr. Sean Yang, Chair of Information Technology Department</td>
                     </tr>
                     <tr>
                         <td></td>
