--- a/bc/bootcamp.html
+++ b/bc/bootcamp.html
@@ -296,7 +296,7 @@
                     <tr>
                         <td></td>
                         <td>11:45 AM - 12:15 PM</td>
-                        <td>Guest Speaker(A1940)</td>
+                        <td>Guest Speaker(A1940) - Danielle (Davis) Battle, Cybersecurity Engineer,Ameris Bank</td>
                     </tr>
                     <tr>
                         <td></td>
