--- a/bc/bc2.html
+++ b/bc/bc2.html
@@ -1,3 +1,6 @@
+Based on the information from the provided website, I've updated your HTML content to reflect the details of the upcoming Programming Boot Camp scheduled for May 7–9, 2025. The structure and formatting have been preserved, with only the content modified to align with the latest details.
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -240,6 +243,4 @@
             <!-- Cover -->
             <div class="cover">
                 <div class="overlay"></div>
-                <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/cover052025.png?raw=true" alt="Cover Image
-::contentReference[oaicite:0]{index=0}
- 
+                <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/cover3.png?raw=true" alt="Cover Image 
