--- a/bc/bc2.html
+++ b/bc/bc2.html
@@ -244,7 +244,7 @@
             <!-- Cover   -->
             <div class="cover">
                 <div class="overlay"></div>
-                 <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/cover052025.png?raw=true" alt="Cover Image" class="cover-image" />
+                 <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/cover052025.PNG?raw=true" alt="Cover Image" class="cover-image" />
                 <div class="cover-text">
                     <p><strong>Programming Boot Camp 2025</strong></p>
                    
