--- a/bc/bc2.html
+++ b/bc/bc2.html
@@ -406,10 +406,12 @@
                         <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" alt="Google Logo" class="logo">
                     </a>
             </div>
+            <div>
+                    <p>Note: Expansion of the bootcamp program has been generously supported by a two-year grant from Google LLC.</p>
 
+            </div>
         </div>
-        <p>Note: Expansion of the bootcamp program has been generously supported by a two-year grant from Google LLC.</p>
-    </div>
+            </div>
 
 </body>
 </html>
