--- a/bc/bc2.html
+++ b/bc/bc2.html
@@ -229,8 +229,7 @@
       <div class="toc">
             <h2><i class="fa fa-list-ul"></i> Table of Contents</h2>
             <a href="#bootcamp1"><i class="fa fa-calendar"></i> May 2025 Boot Camp</a>
-            <a href="bc2.html" target="_blank"><i class="fa fa-file"></i> Additional Information</a>
-            <a href="https://hpark7.github.io/bc/bootcamp.html" target="_blank"><i class="fa fa-link"></i> Bootcamp Details</a>
+            <a href="https://hpark7.github.io/bc/bootcamp.html" target="_blank"><i class="fa fa-link"></i> January 2025 Boot Camp</a>
     </div>
 
 
