--- a/bc/index.html
+++ b/bc/index.html
@@ -1,1 +1,81 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boot Camp</title>
+    <style>
+        /* Add your CSS here */
+        .container {
+            display: grid;
+            grid-template-columns: 250px 1fr;
+            gap: 10px;
+            height: 100vh;
+        }
+
+        .toc {
+            background: #f0f0f0;
+            padding: 20px;
+            border-right: 1px solid #ddd;
+        }
+
+        .main-content {
+            padding: 20px;
+            overflow-y: auto;
+        }
+
+        .toc a {
+            display: block;
+            margin: 10px 0;
+            color: #004d99;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .toc a:hover {
+            text-decoration: underline;
+        }
+    </style>
+    <script>
+        // Function to load dynamic content
+        function loadContent(url) {
+            fetch(url)
+                .then(response => response.text())
+                .then(data => {
+                    document.querySelector('.main-content').innerHTML = data;
+                })
+                .catch(error => {
+                    document.querySelector('.main-content').innerHTML = '<p>Error loading content. Please try again later.</p>';
+                });
+        }
+
+        // Event listener for loading content
+        document.addEventListener('DOMContentLoaded', () => {
+            const links = document.querySelectorAll('.toc a');
+            links.forEach(link => {
+                link.addEventListener('click', event => {
+                    event.preventDefault();
+                    const url = link.getAttribute('data-content-url');
+                    loadContent(url);
+                });
+            });
+        });
+    </script>
+</head>
+<body>
+    <div class="container">
+        <!-- Table of Contents -->
+        <div class="toc">
+            <h2>Table of Contents</h2>
+            <a href="#may-2025" data-content-url="content-may-2025.html">May 2025 Boot Camp</a>
+            <a href="#january-2025" data-content-url="content-january-2025.html">January 2025 Boot Camp</a>
+        </div>
+
+        <!-- Main Content Area -->
+        <div class="main-content">
+            <p>Welcome! Click a link from the Table of Contents to see the details.</p>
+        </div>
+    </div>
+</body>
+</html>
