--- a/bc/content-may-2025.html
+++ b/bc/content-may-2025.html
@@ -1,7 +1,95 @@
-<h2>May 2025 Boot Camp</h2>
-<p>The May 2025 Boot Camp will be held from May 7 to May 9, 2025. This event is designed to prepare students for success in programming courses.</p>
-<ul>
-    <li>Day 1: Java Basics</li>
-    <li>Day 2: Advanced Programming</li>
-    <li>Day 3: Special Topics</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>May 2025 Boot Camp</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to shared CSS -->
+</head>
+<body>
+
+    <!-- Header -->
+    <header class="header">
+        <h1>May 2025 Boot Camp</h1>
+        <p>Wednesday, May 7, 2025 - Friday, May 9, 2025</p>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <section>
+            <h2>About the Boot Camp</h2>
+            <p>The May 2025 Boot Camp is designed to prepare students for success in programming courses and provide professional development opportunities.</p>
+        </section>
+
+        <section>
+            <h2>Purpose</h2>
+            <ul>
+                <li><strong>Prepare Students for Success:</strong> Build foundational skills and confidence for programming courses.</li>
+                <li><strong>Support Programming Students:</strong> Refresh knowledge for those with prior programming experience.</li>
+                <li><strong>Build a Community:</strong> Foster connections with peers, mentors, and faculty.</li>
+                <li><strong>Professional Development:</strong> Guest speakers, field trips, and networking opportunities.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Schedule</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Day</th>
+                        <th>Time</th>
+                        <th>Activity</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Wednesday, May 7, 2025</td>
+                        <td>8:30 - 9:00 AM</td>
+                        <td>Breakfast</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>9:00 - 9:30 AM</td>
+                        <td>Pre-Test</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>9:30 - 11:15 AM</td>
+                        <td>Programming Session 1</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday, May 8, 2025</td>
+                        <td>8:30 - 9:00 AM</td>
+                        <td>Breakfast</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>9:00 - 10:15 AM</td>
+                        <td>Programming Session 3</td>
+                    </tr>
+                    <tr>
+                        <td>Friday, May 9, 2025</td>
+                        <td>2:30 - 3:30 PM</td>
+                        <td>Keynote Speaker: Julie Talbot Hubbard</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section>
+            <h2>Registration</h2>
+            <p>Non-GGC students are required to pay a $25 fee. Fee waivers are available based on academic merit (GPA 3.3+).</p>
+            <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">Register Here</a>
+        </section>
+
+        <section>
+            <h2>Support</h2>
+            <p>This program is supported by a two-year grant from Google LLC.</p>
+            <a href="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" target="_blank">
+                <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" alt="Google Logo" style="width: 150px;">
+            </a>
+        </section>
+    </main>
+
+</body>
+</html>
