--- a/bc/content-january-2025.html
+++ b/bc/content-january-2025.html
@@ -1,6 +1,133 @@
-<h2>January 2025 Boot Camp</h2>
-<p>The January 2025 Boot Camp was held on January 3 and January 4, 2025. It focused on building a strong foundation in programming.</p>
-<ul>
-    <li>Day 1: Introduction to Programming</li>
-    <li>Day 2: Problem Solving and Debugging</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>January 2025 Boot Camp</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to shared CSS -->
+</head>
+<body>
+    <!-- Header -->
+    <header class="header">
+        <h1>January 2025 Boot Camp</h1>
+        <p>Friday, January 3, 2025 - Saturday, January 4, 2025</p>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <!-- Introduction -->
+        <section>
+            <h2>About the Boot Camp</h2>
+            <p>The January 2025 Boot Camp is an immersive, in-person experience designed to prepare students for success in programming courses and beyond.</p>
+        </section>
+
+        <!-- Objectives -->
+        <section>
+            <h2>Purpose</h2>
+            <ul>
+                <li><strong>Prepare for Success:</strong> Build foundational skills for programming courses.</li>
+                <li><strong>Support Programming Students:</strong> Refresh knowledge for students with prior exposure to programming.</li>
+                <li><strong>Community Building:</strong> Connect with peers, mentors, and IT faculty for collaboration.</li>
+                <li><strong>Professional Development:</strong> Gain insights through guest speakers, field trips, and networking opportunities.</li>
+            </ul>
+        </section>
+
+        <!-- Schedule -->
+        <section>
+            <h2>Schedule</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Day</th>
+                        <th>Time</th>
+                        <th>Activity</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Friday, January 3, 2025</td>
+                        <td>8:30 - 9:00 AM</td>
+                        <td>Breakfast</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>9:00 - 9:30 AM</td>
+                        <td>Pre-Test</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>9:30 - 11:30 AM</td>
+                        <td>Programming 1</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>11:45 AM - 12:15 PM</td>
+                        <td>Guest Speaker: Danielle Battle</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>12:15 - 1:15 PM</td>
+                        <td>Lunch</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>1:30 - 4:00 PM</td>
+                        <td>Programming 2</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>4:15 - 5:00 PM</td>
+                        <td>Special Topic</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday, January 4, 2025</td>
+                        <td>8:30 - 9:00 AM</td>
+                        <td>Breakfast</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>9:00 - 11:30 AM</td>
+                        <td>Programming 3</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>11:35 AM - 1:00 PM</td>
+                        <td>Guest Speaker: Dr. Sean Yang</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>1:15 - 3:30 PM</td>
+                        <td>Programming 4</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>3:30 - 4:15 PM</td>
+                        <td>Post-Test and Survey</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>4:30 - 5:00 PM</td>
+                        <td>Closing Ceremony</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <!-- Registration -->
+        <section>
+            <h2>Registration</h2>
+            <p>Registration for non-GGC students includes a $25 fee. Fee waivers are available for eligible students with a GPA of 3.3 or higher.</p>
+            <p>Registration is now closed.</p>
+        </section>
+
+        <!-- Support -->
+        <section>
+            <h2>Support</h2>
+            <p>The expansion of this program has been generously supported by a two-year grant from Google LLC.</p>
+            <a href="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" target="_blank">
+                <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" alt="Google Logo" style="width: 150px;">
+            </a>
+        </section>
+    </main>
+</body>
+</html>
