--- a/bc/content-january-2025.html
+++ b/bc/content-january-2025.html
@@ -3,36 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>January 2025 Boot Camp</title>
+    <title>Winter 2025 Boot Camp</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to shared CSS -->
 </head>
 <body>
     <!-- Header -->
     <header class="header">
-        <h1>January 2025 Boot Camp</h1>
+        <h1>Winter 2025 Boot Camp</h1>
         <p>Friday, January 3, 2025 - Saturday, January 4, 2025</p>
     </header>
 
     <!-- Main Content -->
     <main>
-        <!-- Introduction -->
+        <!-- About Section -->
         <section>
             <h2>About the Boot Camp</h2>
-            <p>The January 2025 Boot Camp is an immersive, in-person experience designed to prepare students for success in programming courses and beyond.</p>
+            <p>The Winter 2025 Boot Camp is designed to prepare students for success in programming courses, build a supportive IT community, and offer professional development opportunities.</p>
         </section>
 
         <!-- Objectives -->
         <section>
             <h2>Purpose</h2>
             <ul>
-                <li><strong>Prepare for Success:</strong> Build foundational skills for programming courses.</li>
+                <li><strong>Prepare Students for Success:</strong> Build foundational skills for programming courses.</li>
                 <li><strong>Support Programming Students:</strong> Refresh knowledge for students with prior exposure to programming.</li>
-                <li><strong>Community Building:</strong> Connect with peers, mentors, and IT faculty for collaboration.</li>
-                <li><strong>Professional Development:</strong> Gain insights through guest speakers, field trips, and networking opportunities.</li>
+                <li><strong>Community Building:</strong> Connect with peers, mentors, and IT faculty.</li>
+                <li><strong>Professional Development:</strong> Guest speakers, field trips, and networking opportunities.</li>
             </ul>
         </section>
 
-        <!-- Schedule -->
+        <!-- Schedule Section -->
         <section>
             <h2>Schedule</h2>
             <table>
@@ -75,11 +75,6 @@
                         <td>Programming 2</td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td>4:15 - 5:00 PM</td>
-                        <td>Special Topic</td>
-                    </tr>
-                    <tr>
                         <td>Saturday, January 4, 2025</td>
                         <td>8:30 - 9:00 AM</td>
                         <td>Breakfast</td>
@@ -113,20 +108,22 @@
             </table>
         </section>
 
-        <!-- Registration -->
+        <!-- Registration Section -->
         <section>
             <h2>Registration</h2>
             <p>Registration for non-GGC students includes a $25 fee. Fee waivers are available for eligible students with a GPA of 3.3 or higher.</p>
-            <p>Registration is now closed.</p>
+            <p><strong>Note:</strong> Registration is now closed.</p>
         </section>
 
-        <!-- Support -->
+        <!-- Support Section -->
         <section>
             <h2>Support</h2>
-            <p>The expansion of this program has been generously supported by a two-year grant from Google LLC.</p>
-            <a href="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" target="_blank">
-                <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" alt="Google Logo" style="width: 150px;">
-            </a>
+            <p>The expansion of the boot camp program has been generously supported by a two-year grant from Google LLC.</p>
+            <div class="center">
+                <a href="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" target="_blank">
+                    <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" alt="Google Logo" style="width: 150px;">
+                </a>
+            </div>
         </section>
     </main>
 </body>
