--- a/bc/content-may-2025.html
+++ b/bc/content-may-2025.html
@@ -16,21 +16,24 @@
 
     <!-- Main Content -->
     <main>
+        <!-- About Section -->
         <section>
             <h2>About the Boot Camp</h2>
-            <p>The May 2025 Boot Camp is designed to prepare students for success in programming courses and provide professional development opportunities.</p>
+            <p>The May 2025 Boot Camp is an in-person event designed to prepare students for programming success, build a strong IT community, and provide professional development opportunities.</p>
         </section>
 
+        <!-- Objectives Section -->
         <section>
             <h2>Purpose</h2>
             <ul>
-                <li><strong>Prepare Students for Success:</strong> Build foundational skills and confidence for programming courses.</li>
-                <li><strong>Support Programming Students:</strong> Refresh knowledge for those with prior programming experience.</li>
+                <li><strong>Prepare Students for Success:</strong> Build foundational programming skills and confidence.</li>
+                <li><strong>Support Programming Students:</strong> Refresh knowledge for students with prior programming experience.</li>
                 <li><strong>Build a Community:</strong> Foster connections with peers, mentors, and faculty.</li>
-                <li><strong>Professional Development:</strong> Guest speakers, field trips, and networking opportunities.</li>
+                <li><strong>Professional Development:</strong> Gain insights through guest speakers, field trips, and networking opportunities.</li>
             </ul>
         </section>
 
+        <!-- Schedule Section -->
         <section>
             <h2>Schedule</h2>
             <table>
@@ -58,6 +61,31 @@
                         <td>Programming Session 1</td>
                     </tr>
                     <tr>
+                        <td></td>
+                        <td>11:30 AM - 12:30 PM</td>
+                        <td>Guest Speaker(s)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>12:30 - 1:00 PM</td>
+                        <td>Lunch</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>1:15 - 2:30 PM</td>
+                        <td>Programming Session 2</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>2:45 - 3:45 PM</td>
+                        <td>Guest Speaker(s)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>4:00 - 5:00 PM</td>
+                        <td>Ice-cream social and mentoring</td>
+                    </tr>
+                    <tr>
                         <td>Thursday, May 8, 2025</td>
                         <td>8:30 - 9:00 AM</td>
                         <td>Breakfast</td>
@@ -68,28 +96,86 @@
                         <td>Programming Session 3</td>
                     </tr>
                     <tr>
+                        <td></td>
+                        <td>10:30 - 11:45 AM</td>
+                        <td>Programming Session 4</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>11:45 AM - 1:00 PM</td>
+                        <td>Guest Speakers and Lunch</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>1:15 - 2:30 PM</td>
+                        <td>Programming Session 5</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>2:45 - 3:45 PM</td>
+                        <td>Student Panel</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>4:00 - 5:00 PM</td>
+                        <td>Programming Session 6</td>
+                    </tr>
+                    <tr>
                         <td>Friday, May 9, 2025</td>
+                        <td>8:30 - 9:00 AM</td>
+                        <td>Breakfast</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>9:00 - 11:00 AM</td>
+                        <td>Programming Session 7</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>11:00 AM - 12:30 PM</td>
+                        <td>Special Topic: Database</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>12:30 - 1:10 PM</td>
+                        <td>Lunch</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>1:15 - 2:15 PM</td>
+                        <td>Post-Test and Survey</td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>2:30 - 3:30 PM</td>
                         <td>Keynote Speaker: Julie Talbot Hubbard</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>3:30 - 4:30 PM</td>
+                        <td>Closing Ceremony and Alumni Visit</td>
                     </tr>
                 </tbody>
             </table>
         </section>
 
+        <!-- Registration Section -->
         <section>
             <h2>Registration</h2>
-            <p>Non-GGC students are required to pay a $25 fee. Fee waivers are available based on academic merit (GPA 3.3+).</p>
-            <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">Register Here</a>
+            <p>Registration for non-GGC students includes a $25 fee. Fee waivers are available for eligible students with a GPA of 3.3 or higher.</p>
+            <p><strong>Note:</strong> Registration is now closed.</p>
         </section>
 
+        <!-- Support Section -->
         <section>
             <h2>Support</h2>
-            <p>This program is supported by a two-year grant from Google LLC.</p>
-            <a href="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" target="_blank">
-                <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" alt="Google Logo" style="width: 150px;">
-            </a>
+            <p>This boot camp is supported by a two-year grant from Google LLC.</p>
+            <div class="center">
+                <a href="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" target="_blank">
+                    <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" alt="Google Logo" style="width: 150px;">
+                </a>
+            </div>
         </section>
     </main>
-
 </body>
 </html>
